--- a/app/templates/queries/new.hbs
+++ b/app/templates/queries/new.hbs
@@ -31,7 +31,7 @@
 
     <div class="row">
       <div class="form-group col-4">
-        <label for="frequency">Frequency</label>
+        <label for="frequency">ExAC Frequency</label>
         {{input type="text" id="frequency" value=model.frequency class="form-control" placeholder="0.01"}}
       </div>
       <div class="form-group col-4">
